--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Listing
 
 <head>
 <meta charset="utf-8" />
-<meta name="author" content="Piotr Grudniewski" />
+<meta name="author" content="Majkel" />
 <title>Zegarek w JavaScript</title>
     <script>
         function zegarek()
